run on Java 21 #11518